/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package atsconsole.controller;

option java_package = "com.google.devtools.atsconsole.controller.proto";
option java_outer_classname = "SessionPluginProto";

message AtsSessionPluginConfig {
  oneof command {
    RunCommand run_command = 1;
    ListCommand list_command = 2;
    DumpCommand dump_command = 3;
  }
}

message AtsSessionPluginOutput {
  oneof result {
    Success success = 1;

    Failure failure = 2;
  }

  message Success {
    // Required.
    string output_message = 1;
  }

  message Failure {
    // Required.
    string error_message = 1;
  }
}

message RunCommand {
  // Required.
  //
  // Example: "cts".
  string test_plan = 1;

  // Optional.
  repeated string device_serial = 2;

  // Optional.
  repeated string modules = 3;
}

message ListCommand {
  oneof command {
    ListDevicesCommand list_devices_command = 1;
  }
}

message ListDevicesCommand {
  // Whether to list all devices including placeholders.
  bool list_all_devices = 1;
}

message DumpCommand {
  oneof command {
    DumpStackTraceCommand dump_stack_trace_command = 1;
    DumpEnvVarCommand dump_env_var_command = 2;
    DumpUptimeCommand dump_uptime_command = 3;
  }
}

message DumpStackTraceCommand {}

message DumpEnvVarCommand {}

message DumpUptimeCommand {}
